5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1826_1647.log
== TEST (2019-06-12 18:24:51) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1

w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

for j in range(s)
	if v[j] >= 70:
		for k in z:
			if k == 0:
				z[k] = j

print(z)
-- ERROR:
File "XXXX", line 15
    for j in range(s)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:24:59) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1

w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

for j in range(s):
	if v[j] >= 70:
		for k in z:
			if k == 0:
				z[k] = j

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:25:49) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

for j in range(s):
	if v[j] >= 70:
		for k in z:
			if k == 0:
				z[k] = j
			elif k != 0:
				z[k] = z[k]

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:26:12) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

for j in range(s):
	if v[j] >= 70:
		for k in z:
			if k == 0:
				z[k] = j

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:26:54) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

for j in range(s):
	if v[j] >= 70:
		for k in range(ap):
			if z[k] == 0:
				z[k] = j

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:27:05) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

for j in range(s):
	if v[j] >= 70:
		for k in range(ap):
			if z[k] == 0:
				z[k] = j

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:28:55) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

for j in range(s):
	for k in range(ap):
		if v[j] >= 70 and z[k] == 0:
			z[k] = j

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:29:00) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

for j in range(s):
	for k in range(ap):
		if v[j] >= 70 and z[k] == 0:
			z[k] = j

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:29:37) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

for j in range(s):
	for k in range(ap):
		if v[j] >= 70 and z[k] == 0:
			z[k] = j

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:30:01) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

for j in range(s):
	print(j)
	for k in range(ap):
		print(k)
		if v[j] >= 70 and z[k] == 0:
			print(v[j])
			z[k] = j

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:30:21) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

for j in range(s):
	print(j)
	for k in range(ap):
		print(k)
		if v[j] >= 70 and z[k] == 0:
			print(v[j])
			z[k] = j

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:31:32) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

for j in range(s):
	print("j",j)
	for k in range(ap):
		print("k",k)
		if v[j] >= 70 and z[k] == 0:
			print(v[j])
			z[k] = j

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:17:30) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

for j in range(s):
	for k in range(ap):
		if (v[j] >=) 70 and (z[k] == 0):
			z[k] = j

print(z)
-- ERROR:
File "XXXX", line 17
    if (v[j] >=) 70 and (z[k] == 0):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:17:39) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

for j in range(s):
	for k in range(ap):
		if (v[j] >= 70) and (z[k] == 0):
			z[k] = j

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:17:59) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

for j in range(s):
	for k in range(ap):
		print('k', k)
		if (v[j] >= 70) and (z[k] == 0):
			z[k] = j

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:18:29) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

for j in range(s):
	for k in range(ap):
		print('j', j,'k', k)
		if (v[j] >= 70) and (z[k] == 0):
			z[k] = j

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:18:59) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

for j in range(s):
	for k in range(ap - 1):
		print('j', j,'k', k)
		if (v[j] >= 70) and (z[k] == 0):
			z[k] = j

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:19:50) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

for j in range(s):
	for k in range(ap - 1):
		print('j', j,'k', k)
		if (v[j] >= 70) and (z[k] == 0):
			z[k] = j

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:21:23) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

k = 0

for j in range(s-1):
	if (v[j] >= 70):
		z[k] = j
		k = k + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:21:38) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

k = 0

for j in range(s-1):
	if (v[j] >= 70):
		z[k] = j
		k = k + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:21:56) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")))
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

k = 0

for j in range(s-1):
	if (v[j] >= 70):
		z[k] = j
		k = k + 1

print(z)
-- EXECUTION TIME:
0.842902
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[2 3 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 3 4 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:22:27) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")), dtype=float)
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

k = 0

for j in range(s-1):
	if (v[j] >= 70):
		z[k] = j
		k = k + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:22:34) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")), dtype=float)
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

k = 0

for j in range(s-1):
	if (v[j] >= 70):
		z[k] = j
		k = k + 1

print(z)
-- EXECUTION TIME:
1.19042
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[2 3 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 3 4 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:22:38) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")), dtype=float)
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

k = 0

for j in range(s-1):
	if (v[j] >= 70):
		z[k] = j
		k = k + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:23:06) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")), dtype=float)
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

k = 0

for j in range(s):
	if (v[j] >= 70):
		z[k] = j
		k = k + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:23:18) 
-- CODE:
from numpy import*

v = array(eval(input("Frequencia: ")), dtype=float)
s = size(v)

ap = 0
for i in v:
	if i >= 70:
		ap = ap + 1
print(ap)
w = zeros(size(v), dtype=int)

z = zeros(ap, dtype=int)

k = 0

for j in range(s):
	if (v[j] >= 70):
		z[k] = j
		k = k + 1

print(z)
-- EXECUTION TIME:
1.31083
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[2 3 5]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 3 4 6]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
